@@ -7,6 +7,7 @@ Development (next version)
   * Two CUDA API sample programs are added: SGEMM and DAXPY
   * All correctness tests and performance clients work on CUDA like they did for OpenCL
 - Kernels are now cached based on their tuning parameters: fits the use-case of 'OverrideParameters'
+- Cross-compiling for Android is now supported using CMake; instructions are added to the README
 - Improved performance for small GEMM problems by going from 3 to 1 optional temporary buffers
 - Various minor fixes and enhancements
 - Added tuned parameters for various devices (see README)
